<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WetlandTrackr</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="service">Services</string>
    <string name="the_team">The Team</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_capture_image">WetlandTrackr</string>
    <string name="title_activity_login">Wetland Trackr</string>
    <string name="title_activity_land_access">WetlandTrackr</string>
    <string name="title_activity_plants">WetlandTrackr</string>

</resources>
