<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.geekulcha.wetlandtrackr.LandAccess" >

    <item
        android:id="@+id/faq"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/faq"/>
    <item
        android:id="@+id/service"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/service"/>
    <item
        android:id="@+id/the_team"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/the_team"/>
    <item
        android:id="@+id/contact"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/help"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/logout"/>

</menu>